exports[`show placeholder by rendering`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        Add Tag
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Add Tag"
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`show tags by rendering`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag">
      <span
        onClick={[Function]}>
        apple
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span
      className="react-input-tags-tag">
      <span
        onClick={[Function]}>
        banana
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span
      className="react-input-tags-tag">
      <span
        onClick={[Function]}>
        cherry
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`update suggestions by typing in input`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`update tags by creating, editing and deleting`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span
      className="react-input-tags-tag">
      <span
        onClick={[Function]}>
        apple
      </span>
      <button
        onClick={[Function]}>
        x
      </button>
    </span>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;
